--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,37 +8,40 @@
 {% include 'navbar.html' %}
 
 <div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gradient-to-r from-violet-200 to-pink-200 flex flex-col">
-  <h2 class="text-xl font-extrabold text-rose-400 mb-3 text-center">User Info</h2>
-  <img src="/static/image/profile.png" alt="Profile" class="w-40 h-40 mb-3 rounded-full mx-auto border-4 border-rose-400"/>
+  <h2 class="text-xl font-extrabold text-rose-400 mb-3 text-center">Embrace Your Radiance with Luxury Glow >_< </h2>
+  
+  <!-- Bagian Gambar Lingkaran Dihapus -->
+  
   <div class="p-2 mb-6 relative">
     <div class="relative grid lg:grid-cols-2 md:grid-cols-2 gap-5 z-30">
-      {% include "card_info.html" with title='Name' value=nama %}
+      {% include "card_info.html" with title='Name' value=name %}
       {% include "card_info.html" with title='Class' value=kelas %}
     </div>
+  </div>
+
+  <div class="px-3 mb-4">
+    <div class="flex rounded-md items-center bg-pink-700 py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
+    </div>
+  </div>
+
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product_entry' %}" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+      Add New product Entry
+    </a>
+  </div>
   
-</div>
-    <div class="px-3 mb-4">
-      <div class="flex rounded-md items-center bg-pink-700 py-2 px-4 w-fit">
-        <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
-      </div>
-    </div>
-    <div class="flex justify-end mb-6">
-        <a href="{% url 'main:create_product_entry' %}" class="bg-pink-600 hover:bg-pink-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-            Add New product Entry
-        </a>
-    </div>
-    
-    {% if not product_entries %}
-    <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-        <img src="/static/image/sedih-banget.png" alt="Sad face" class="w-32 h-32 mb-4"/>
-        <p class="text-center text-gray-600 mt-4">Belum ada data product pada Luxury Glow.</p>
-    </div>
-    {% else %}
-    <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
-        {% for product_entry in product_entries %}
-            {% include 'card_product.html' with product_entry=product_entry %}
-        {% endfor %}
-    </div>
-    {% endif %}
+  {% if not product_entries %}
+  <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+    <img src="/static/image/kucing_sedih.jpg" alt="Sad face" class="w-32 h-32 mb-4"/>
+    <p class="text-center text-gray-600 mt-4">Belum ada data product pada Luxury Glow.</p>
+  </div>
+  {% else %}
+  <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
+    {% for product_entry in product_entries %}
+      {% include 'card_product.html' with product_entry=product_entry %}
+    {% endfor %}
+  </div>
+  {% endif %}
 </div>
 {% endblock content %}
