--- a/main/templates/card_info.html
+++ b/main/templates/card_info.html
@@ -1,6 +1,7 @@
-<div class="bg-indigo-700 rounded-xl overflow-hidden border-2 border-indigo-800">
+<div style="background-color: rgb(181, 171, 232); border: 2px solid rgb(39, 0, 79);" class="rounded-xl overflow-hidden"> 
     <div class="p-4 animate-shine">
-      <h5 class="text-lg font-semibold text-gray-200">{{ title }}</h5>
-      <p class="text-white">{{ value }}</p>
+      <h5 style="color: rgb(27, 70, 150);" class="text-lg font-semibold">{{ title }}</h5>
+      <p style="color: rgb(181, 64, 114);">{{ value }}</p>
     </div>
-</div>
+  </div>
+  
