--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -156,7 +156,7 @@
         classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
         htmlString = `
           <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-            <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
+            <img src="{% static 'image/kucing_sedih.jpg' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
             <p class="text-center text-gray-600 mt-4">Belum ada data produk pada Luxury Glow.</p>
           </div>
         `;
